# zken

./: .gitignore  Cargo.toml
contracts/: bn.sol  coprime.sol  mod_eq.sol  pairing.sol  root.sol
src/: constants.rs  lib.rs  utils.rs
src/lego/: constraints.rs  data_structures.rs  error.rs  generator.rs  mod.rs  prover.rs  r1cs_to_qap.rs  verifier.rs
src/lego/link/: mod.rs  snark.rs  utils.rs
src/primitives/: mod.rs
src/primitives/accumulator/: mod.rs
src/primitives/bn/: mod.rs
src/primitives/mt/: constraints.rs  mod.rs
src/primitives/poseidon/: constraints.rs  mod.rs
src/primitives/secp256k1/: constraints.rs  mod.rs  precomputed
src/proofs/: bind_id.rs  mod.rs  pt_form.rs  range.rs  recv.rs  sn_form.rs  sn_range.rs  test.rs
src/proofs/custom/: mod.rs  range.rs  sum.rs
src/proofs/membership/: coprime.rs  mem.rs  mem_and_nonmem.rs  mod.rs  mod_eq.rs  nonmem.rs  root.rs
src/protocols/: mint.rs  mod.rs  pour.rs  reveal.rs
src/web3/: mod.rs
