[package]
name = "zken"
version = "0.0.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-serialize = { version = "0.4.0" }
ark-ff = { version = "0.4.0", features = ["asm", "parallel"] }
ark-ec = { version = "0.4.0", features = ["parallel"] }
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.4.0", features = ["parallel"] }
ark-bn254 = { version = "0.4.0" }
ark-secp256k1 = "0.4.0"
ark-relations = { version = "0.4.0" }
ark-snark = { version = "0.4.0" }
rand = { version = "^0.8.0" }
num = { version = "^0.4.0", features = ["rand", "serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_with = "2.1.0"
rayon = "*"

[dev-dependencies]
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", features = ["parallel", "print-trace"] }
# seq-macro = "0.3"

[features]
default = ["parallel"]
parallel = []

[profile.test]
opt-level = 3